--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           }
           document.write("<div class='three columns'>");
           document.write("<a href='#investment' data-router='section' id='inv"+x+"'>");
-          document.write("<img src='#' id='invPic"+x+"' onclick='changeInvProfileInfo("+x+");'>");
+          document.write("<img id='invPic"+x+"' onclick='changeInvProfileInfo("+x+");'>");
           document.write("</a>");
           document.write("</div>");
           if(x!=0 && x%3==0)
