[api] investor profile still not ready; again working on satisfaction impact when changing salary; have a second look on productscore and investor interest score in statusbar; in employee profile do a better improve of progress bars...

--- a/index.html
+++ b/index.html
@@ -237,14 +237,9 @@
     });
     </script>
 
-
   </head>
 
-
   <body class="app">
-
-
-
 
     <!--//////////// MAIN VIEW ////////////-->
     <!--//////////// Employees, Investors, Main Menu with bottom bar ////////////-->
@@ -336,7 +331,7 @@
           <a href="#employees" data-router="article" class="current" data-icon="user"></a>
           <a href="#investors" data-router="article" data-icon="inbox"></a>
           <a href="#menu-ingame" data-router="article" data-icon="settings"></a>
-          <a href="#next_round" data-icon="right" onclick="nextRound();"></a>
+          <a href="#next_round" data-icon="right" data-label="Next Round" onclick="nextRound();"></a>
         </nav>
       </footer>
 
@@ -357,12 +352,9 @@
           <a href="#back" data-router="section" data-icon="close" data-label="Fire" class="fireEmp"></a>
         </nav>
       </header>
-
       <article class="scroll">
         <form class="margined">
-
           <img src='' id='emp_profile_pic' >      
-
           <label id="empProfileSkill"></label>
           <table border="0" cellspacing="0" cellpadding="0" width="100%">
             <tr>
@@ -401,7 +393,6 @@
     </section>
     <!-- /////////// END /////////// -->
     <!--//////////// EMPLOYEE PROFILE ////////////-->
-
 
     <!--//////////// HIRE EMPLOYEES ////////////-->    
 
