--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     <script src="lib/components/quojs/quo.js"></script>
     <script src="lib/components/lungo/lungo.js"></script>
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.js"></script>
+  <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.js"></script>-->
+    <script src="lib/jquery.js"></script>
     <script src="lib/jquery.total-storage.js"></script>                
     <script src="lib/coffeeinc.js"></script>
     <!-- Lungo - Sandbox App -->
