[ui] fixed employee name list

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <!-- Lungo - Sandbox App -->
     <script type="text/javascript">
       $(document).ready(function(){
-        var nameArray=["Homer","Peter","Fry","Cleveland","Glenn","Joe","Bender"];       
-        var surnameArray=["SMITH", "MITCHELL", "JONES", "KELLY", "WILLIAMS", "COOK","TAYLOR", "CARTER", "BROWN", "RICHARDSON", "DAVIES", "BAILEY", "EVANS", "COLLINS", "WILSON","BELL", "THOMAS", "SHAW", "JOHNSON", "MURPHY", "ROBERTS", "MILLER", "ROBINSON", "COX","THOMPSON", "RICHARDS", "WRIGHT", "KHAN", "WALKER", "MARSHALL", "WHITE", "ANDERSON","EDWARDS", "SIMPSON", "HUGHES", "ELLIS", "GREEN", "ADAMS", "HALL", "SINGH", "LEWIS","BEGUM", "HARRIS", "WILKINSON", "CLARKE", "FOSTER", "PATEL", "CHAPMAN", "JACKSON","POWELL", "WOOD", "WEBB", "TURNER", "ROGERS", "MARTIN", "GRAY", "COOPER", "MASON","HILL", "ALI", "WARD", "HUNT", "MORRIS", "HUSSAIN", "MOORE", "CAMPBELL", "CLARK", "MATTHEWS","LEE", "OWEN", "KING", "PALMER", "BAKER", "HOLMES", "HARRISON", "MILLS", "MORGAN", "BARNES","ALLEN", "KNIGHT", "JAMES", "LLOYD", "SCOTT", "BUTLER", "PHILLIPS", "RUSSELL", "WATSON","BARKER", "DAVIS", "FISHER", "PARKER", "STEVENS", "PRICE", "JENKINS", "BENNETT", "MURRAY","YOUNG", "DIXON", "GRIFFIN", "HARVEY"];
+        var nameArray=["Homer", "Bart", "Montgomery", "Peter", "Philip J.", "John", "Hermes", "Cleveland", "Glenn", "Joe", "Bender", "Sheldon","Zapp",];       
+        var surnameArray=["Simpson", "Griffin", "Burns", "Zoidberg", "Conrad", "Doe", "Derp", "Dawg", "Cooper", "Rodriguez", "Quagmire", "Conrad", "Fry", "Brannigan"];
           
         employeeInformation=[];
         if($.totalStorage.getItem("emp")){
