[ui] some css fixes to navigation, footer and salary +/- buttons

--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@
           <div id="empProgressProfileSat" data-progress="10%"></div>
           <label id="empProfileSalary"></label>
           <div id="empProgressProfileSalary" data-progress="10%"></div>
-          <button id="salaryDec" onclick="javascript:decSalary();" class="button red">-</button>
-          <button id="salaryInc" onclick="javascript:incSalary();" class="button green">+</button>
+          <button id="salaryDec" onclick="javascript:decSalary();" class="big button red">–</button>
+          <button id="salaryInc" onclick="javascript:incSalary();" class="big button green">+</button>
           <!--<input type="range" id="empProgressProfileSalary" data-progress="10%" />-->
         </form>
       </article>
