[api] fixed problem with empty image (link to hiring page)

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             document.write("<div class='three rows'>");
           }
           document.write("<div class='three columns'>");
-          document.write("<a href='#employee_hire' data-router='section' id='emp"+x+"'>");
+          document.write("<a href='#' data-router='section' id='emp"+x+"'>");
           document.write("<img scr='/CoffeeInc2/assets/empty.svg' id='empPic"+x+"' onclick='changeEmpProfileInfo("+x+");'>");
           document.write("</a>");
           document.write("</div>");
@@ -277,7 +277,7 @@
             document.write("<div class='three rows'>");
           }
           document.write("<div class='three columns'>");
-          document.write("<a href='#investment' data-router='section' id='inv"+x+"'>");
+          document.write("<a href='#' data-router='section' id='inv"+x+"'>");
           document.write("<img scr='/CoffeeInc2/assets/empty.svg' id='invPic"+x+"' onclick='changeInvProfileInfo("+x+");'>");
           document.write("</a>");
           document.write("</div>");
