[api] renamed avSalary in fixedCost

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         if(!$.totalStorage.getItem("stat_budget"))
           $.totalStorage.setItem("stat_budget", 10000);
         statusbarBudget=$.totalStorage.getItem("stat_budget");
-        if(!$.totalStorage.getItem("avSalary"))
-          $.totalStorage.setItem("avSalary",0);
+        if(!$.totalStorage.getItem("fixedCost"))
+          $.totalStorage.setItem("fixedCost",0);
         if(!$.totalStorage.getItem("counter"))
           $.totalStorage.setItem("counter",0);
         
