[ui][dist] started work on icon font; everything horribly broken right now :(

--- a/index.html
+++ b/index.html
@@ -76,22 +76,22 @@
     <!--//////////// Employees, Investors, Main Menu with bottom bar ////////////-->
     <section id="main-view" data-transition="slide">
       <header id="head_items" class="brownbg">
-        <div data-icon="home" class="statusbar_item">
+        <div data-icon="product" class="statusbar_item">
           <input type="text" readonly value="0" id="stat_product" class="stat_item_inp">
         </div>
-        <div data-icon="right" class="statusbar_item">
+        <div data-icon="team" class="statusbar_item">
           <input type="text" readonly value="0" id="stat_talent" class="stat_item_inp">
         </div>
-        <div data-icon="upload" class="statusbar_item">
+        <div data-icon="sat" class="statusbar_item">
           <input type="text" readonly value="0" id="stat_sat" class="stat_item_inp">
         </div>
-        <div data-icon="user" class="statusbar_item">
+        <div data-icon="percent" class="statusbar_item">
           <input type="text" readonly value="0" id="stat_equity" class="stat_item_inp">
         </div>
         <div data-icon="user" class="statusbar_item">
           <input type="text" readonly value="0" id="tmpcounts" class="stat_item_inp">
         </div>
-        <div data-icon="left" class="statusbar_item">
+        <div data-icon="dollar" class="statusbar_item">
           <input type="text" readonly value="0" id="stat_budget" class="stat_item_inp">
         </div>
       </header>
@@ -159,8 +159,8 @@
 
       <footer>
         <nav class="brownbg">
-          <a href="#employees" data-router="article" class="current" data-icon="user"></a>
-          <a href="#investors" data-router="article" data-icon="inbox"></a>
+          <a href="#employees" data-router="article" class="current" data-icon="team"></a>
+          <a href="#investors" data-router="article" data-icon="investor"></a>
           <a href="#menu-ingame" data-router="article" data-icon="settings"></a>
         </nav>
       </footer>
