[ui][dist] some changes to the icon font and html that uses it but still no fix

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <nav class="brownbg">
           <a href="#employees" data-router="article" class="current" data-icon="team"></a>
           <a href="#investors" data-router="article" data-icon="investor"></a>
-          <a href="#menu-ingame" data-router="article" data-icon="settings"></a>
+          <a href="#menu-ingame" data-router="article" data-icon="gear"></a>
         </nav>
       </footer>
 
@@ -176,7 +176,7 @@
     <section id="employee_profile" data-transition="slide">
       <header id="empProfileName" class="title" data-title="Employee Profile">
         <nav class="left box">
-          <a href="#back" data-router="section" data-icon="left"></a>
+          <a href="#back" data-router="section" data-icon="back"></a>
         </nav>
         <nav class="right box">
           <a href="#back" data-router="section" data-icon="close" data-label="Fire" class="fireEmp"></a>
@@ -204,7 +204,7 @@
     <section id="employee_hire" data-transition="slide">
       <header data-title="Hire New Employees" class="brownbg">
         <nav class="left box">
-          <a href="#back" data-router="section" data-icon="left"></a>
+          <a href="#back" data-router="section" data-icon="back"></a>
         </nav>
       </header>
 
