[ui] added the right icons to employee hire view [todo] updated todo

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
               <script type="text/javascript">
               document.write('<input type="hidden" id="newEmpPicId1" value="'+empHiringPicId1+'"><img src="/CoffeeInc2/assets/emp_'+empHiringPicId1+'.svg" class="employee_hire_pic1" id="empHirePic1">');
               document.write('<div class="hireinfo">');
-              document.write('<a data-icon="user"><input type="text" id="newEmpSkill1" value="'+randomEmpHiringSkill1+'" class="stat_item_inp"></a>');
-              document.write('<a data-icon="left"><input type="text" id="newEmpSalary1" value="'+randomEmpHiringSalary1+'" class="stat_item_inp_sal"></a>');
+              document.write('<a data-icon="skill"><input type="text" id="newEmpSkill1" value="'+randomEmpHiringSkill1+'" class="stat_item_inp"></a>');
+              document.write('<a data-icon="dollar"><input type="text" id="newEmpSalary1" value="'+randomEmpHiringSalary1+'" class="stat_item_inp_sal"></a>');
               document.write('</div>');
               </script>
             </a>
@@ -224,8 +224,8 @@
               <script type="text/javascript">
               document.write('<input type="hidden" id="newEmpPicId2" value="'+empHiringPicId2+'"><img src="/CoffeeInc2/assets/emp_'+empHiringPicId2+'.svg" class="employee_hire_pic2" id="empHirePic2">');
               document.write('<div class="hireinfo">');
-              document.write('<a data-icon="user"><input type="text" id="newEmpSkill2" value="'+randomEmpHiringSkill2+'" class="stat_item_inp"></a>');
-              document.write('<a data-icon="left"><input type="text" id="newEmpSalary2" value="'+randomEmpHiringSalary2+'" class="stat_item_inp_sal"></a>');
+              document.write('<a data-icon="skill"><input type="text" id="newEmpSkill2" value="'+randomEmpHiringSkill2+'" class="stat_item_inp"></a>');
+              document.write('<a data-icon="dollar"><input type="text" id="newEmpSalary2" value="'+randomEmpHiringSalary2+'" class="stat_item_inp_sal"></a>');
               document.write('</div>');
               </script>
             </a>
@@ -235,8 +235,8 @@
               <script type="text/javascript">
               document.write('<input type="hidden" id="newEmpPicId3" value="'+empHiringPicId3+'"><img src="/CoffeeInc2/assets/emp_'+empHiringPicId3+'.svg" class="employee_hire_pic3" id="empHirePic3">');
               document.write('<div class="hireinfo">');
-              document.write('<a data-icon="user"><input type="text" id="newEmpSkill3" value="'+randomEmpHiringSkill3+'" class="stat_item_inp"></a>');
-              document.write('<a data-icon="left"><input type="text" id="newEmpSalary3" value="'+randomEmpHiringSalary3+'" class="stat_item_inp_sal"></a>');
+              document.write('<a data-icon="skill"><input type="text" id="newEmpSkill3" value="'+randomEmpHiringSkill3+'" class="stat_item_inp"></a>');
+              document.write('<a data-icon="dollar"><input type="text" id="newEmpSalary3" value="'+randomEmpHiringSalary3+'" class="stat_item_inp_sal"></a>');
               document.write('</div>');
               </script>
             </a>
@@ -246,8 +246,8 @@
               <script type="text/javascript">
               document.write('<input type="hidden" id="newEmpPicId4" value="'+empHiringPicId4+'"><img src="/CoffeeInc2/assets/emp_'+empHiringPicId4+'.svg" class="employee_hire_pic4" id="empHirePic4">');
               document.write('<div class="hireinfo">');
-              document.write('<a data-icon="user"><input type="text" id="newEmpSkill4" value="'+randomEmpHiringSkill4+'" class="stat_item_inp"></a>');
-              document.write('<a data-icon="left"><input type="text" id="newEmpSalary4" value="'+randomEmpHiringSalary4+'" class="stat_item_inp_sal"></a>');
+              document.write('<a data-icon="skill"><input type="text" id="newEmpSkill4" value="'+randomEmpHiringSkill4+'" class="stat_item_inp"></a>');
+              document.write('<a data-icon="dollar"><input type="text" id="newEmpSalary4" value="'+randomEmpHiringSalary4+'" class="stat_item_inp_sal"></a>');
               document.write('</div>');
               </script>
             </a>
