[ui] dynamic employee names in profile view [bug] fixed skillbar in employee profile view

--- a/index.html
+++ b/index.html
@@ -171,10 +171,11 @@
 
     <!--//////////// EMPLOYEE PROFILE ////////////-->    
     <section id="employee_profile" data-transition="slide">
-      <header id="empProfileName" class="title" data-title="Employee Profile">
+      <header class="title" data-title=""">
         <nav class="left box">
           <a href="#back" data-router="section" data-icon="back"></a>
         </nav>
+        <input type="text" value="emp name" id="empProfileName" class="">
         <nav class="right box">
           <a href="#back" data-router="section" data-icon="close" data-label="Fire" class="fireEmp"></a>
         </nav>
