--- a/index.html
+++ b/index.html
@@ -261,10 +261,11 @@
 
     <!--//////////// INVESTOR PROFILE ////////////-->    
     <section id="invsetor_profile" data-transition="slide">
-      <header id="invProfileName" data-title="Invsetor Profile">
+      <header data-title="">
         <nav class="left box">
           <a href="#back" data-router="section" data-icon="left"></a>
         </nav>
+        <input type="text" id="invProfileName" value="inv Name">
         <nav class="right box">
           <a href="#back" data-router="section" data-icon="close" data-label="Fire" class="fireInv"></a>
         </nav>
